# timetracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  Dockerfile  LICENSE  Makefile  PROJECT_CLEANUP_SUMMARY.md  PROJECT_IMPROVEMENT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  build_and_install.sh  docker-compose.yml  exported_data.json  install-remote.sh  install.ps1  install.sh  test_data.json  test_export.csv  test_sorting.sh
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.vercel/: project.json
Formula/: timetracker.rb
docker/: Dockerfile  docker-compose.yml
docs/: ACTIVITY_DETECTION.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SORTING_FIX.md
examples/: basic_usage.md
scripts/: cleanup-project.sh  get_active_window.scpt  install-hooks.sh  pre-commit  release.sh  simple-health-check.sh  test-deployment.sh  test.sh  update-version.sh
src/: ai_analysis.rs  ai_client.rs  ai_config.rs  ai_config_manager.rs  daemon.rs  lib.rs  main.rs  permissions.rs  platform.rs  tracker.rs  tui.rs
src/ai/: analyzer.rs  classifier.rs  client.rs  config.rs  insights.rs  manager.rs  mod.rs
src/config/: app.rs  manager.rs  mod.rs
src/core/: activity_detector.rs  daemon.rs  enhanced_platform.rs  mod.rs  platform.rs  tracker.rs
src/core/monitor/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/team/: mod.rs
src/ui/: components.rs  data.rs  events.rs  layout.rs  mod.rs  renderer.rs  themes.rs  tui.rs  widgets.rs
src/utils/: functional.rs  mod.rs  permissions.rs  time.rs  timeout.rs  validation.rs
tests/: activity_detection_tests.rs  basic_test.sh  integration_activity_tests.rs  integration_tests.rs  unit_tests.rs
