[package]
name = "timetracker"
version = "0.2.2"
edition = "2021"
description = "A cross-platform CLI tool for tracking application window usage time"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/geraldpeng6/timetracker"
homepage = "https://github.com/geraldpeng6/timetracker"
documentation = "https://github.com/geraldpeng6/timetracker#readme"
readme = "README.md"
keywords = ["time-tracking", "productivity", "cli", "monitoring", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    "*.log",
    "timetracker_data.json",
    ".github/",
    "demo.sh",
    "test.sh"
]

[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
copyright = "2024, Your Name <your.email@example.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
TimeTracker is a cross-platform command-line tool that automatically tracks \
the time you spend in different applications and windows. It provides detailed \
statistics and insights about your computer usage patterns through both CLI \
and interactive TUI interfaces.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/timetracker", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/timetracker/", "644"],
    ["LICENSE", "usr/share/doc/timetracker/", "644"],
]

[dependencies]
sysinfo = "0.31"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json"] }

# Directory utilities
dirs = "5.0"

# TUI dependencies
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"

# Better window detection
active-win-pos-rs = "0.9"

# Daemon support
daemonize = "0.5"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[[bin]]
name = "timetracker"
path = "src/main.rs"