[package]
name = "timetracker"
version = "0.2.2"
edition = "2021"
description = "A cross-platform CLI tool for tracking application window usage time"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/geraldpeng6/timetracker"
homepage = "https://github.com/geraldpeng6/timetracker"
documentation = "https://github.com/geraldpeng6/timetracker#readme"
readme = "README.md"
keywords = ["time-tracking", "productivity", "cli", "monitoring", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]
default-run = "timetracker"
exclude = [
    "target/",
    "*.log",
    "timetracker_data.json",
    ".github/",
    "demo.sh",
    "test.sh"
]

[package.metadata.deb]
maintainer = "TimeTracker Team <timetracker@example.com>"
copyright = "2024, TimeTracker Team <timetracker@example.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
TimeTracker is a cross-platform command-line tool that automatically tracks \
the time you spend in different applications and windows. It provides detailed \
statistics and insights about your computer usage patterns through both CLI \
and interactive TUI interfaces. Features include intelligent activity detection, \
video watching recognition, and comprehensive time tracking analytics.
"""
depends = "$auto, libx11-6, libxcb1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/timetracker", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/timetracker/", "644"],
    ["LICENSE", "usr/share/doc/timetracker/", "644"],
    ["docs/ACTIVITY_DETECTION.md", "usr/share/doc/timetracker/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/timetracker", dest = "/usr/bin/timetracker", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/timetracker/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/timetracker/LICENSE", mode = "644" },
    { source = "docs/ACTIVITY_DETECTION.md", dest = "/usr/share/doc/timetracker/ACTIVITY_DETECTION.md", mode = "644" },
]
[package.metadata.generate-rpm.requires]
libX11 = "*"
libxcb = "*"

[dependencies]
sysinfo = "0.31"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json"] }

# Directory utilities
dirs = "5.0"

# TUI dependencies
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"

# Configuration
toml = "0.8"

# Better window detection
active-win-pos-rs = "0.9"

# Process monitoring
psutil = "3.2"

# Daemon support
daemonize = "0.5"
nix = { version = "0.29", features = ["signal"] }

# Caching and async utilities
dashmap = "6.0"
once_cell = "1.19"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true }
xcb = { version = "1.0", optional = true }

# 可选功能
[features]
default = ["x11"]
x11 = ["x11rb"]
xcb_support = ["xcb"]

[[bin]]
name = "timetracker"
path = "src/main.rs"